alignment fixed on CTA

--- a/css/styles.css
+++ b/css/styles.css
@@ -335,8 +335,8 @@ nav img {
 			}
 
 			#spotlight {
-				margin-left: 1.5%;
-				margin-right: .75%;
+				margin-left: .75%;
+				margin-right: 1.5%;
 			}
 
 			.
